apps/prod/mailu/front-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-front-web-ext
  annotations:
    metallb.io/allow-shared-ip: mailu-front
    metallb.universe.tf/allow-shared-ip: mailu-front
spec:
  type: LoadBalancer
  loadBalancerIP: 10.31.0.73
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/component: front
    app.kubernetes.io/instance: mailu
    app.kubernetes.io/name: mailu
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
