apps/prod/mailu/httproute-sso.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailu-sso
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: webmail
  hostnames:
    - webmail.myrobertson.com
  rules:
    - backendRefs:
        - name: mailu-front
          port: 80
